--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,6 +1,6 @@
 <nav>
   <div class="nav-wrapper">
-    <a routerLink="" class="brand-logo">Angular 2 CRUD</a>
+    <a routerLink="" class="brand-logo">Almundo Hoteles</a>
     <ul id="nav-mobile" class="right hide-on-med-and-down">
       <li><a routerLink="/hotels" routerLinkActive="active">Hotels</a></li>
     </ul>
